; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_sge.c_rspq_check_napi.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_sge.c_rspq_check_napi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sge_qset = type { i32, %struct.sge_rspq }
%struct.sge_rspq = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sge_qset*)* @rspq_check_napi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rspq_check_napi(%struct.sge_qset* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sge_qset*, align 8
  %4 = alloca %struct.sge_rspq*, align 8
  store %struct.sge_qset* %0, %struct.sge_qset** %3, align 8
  %5 = load %struct.sge_qset*, %struct.sge_qset** %3, align 8
  %6 = getelementptr inbounds %struct.sge_qset, %struct.sge_qset* %5, i32 0, i32 1
  store %struct.sge_rspq* %6, %struct.sge_rspq** %4, align 8
  %7 = load %struct.sge_qset*, %struct.sge_qset** %3, align 8
  %8 = getelementptr inbounds %struct.sge_qset, %struct.sge_qset* %7, i32 0, i32 0
  %9 = call i32 @napi_is_scheduled(i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %26, label %11

11:                                               ; preds = %1
  %12 = load %struct.sge_rspq*, %struct.sge_rspq** %4, align 8
  %13 = getelementptr inbounds %struct.sge_rspq, %struct.sge_rspq* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load %struct.sge_rspq*, %struct.sge_rspq** %4, align 8
  %16 = getelementptr inbounds %struct.sge_rspq, %struct.sge_rspq* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds i32, i32* %14, i64 %17
  %19 = load %struct.sge_rspq*, %struct.sge_rspq** %4, align 8
  %20 = call i64 @is_new_response(i32* %18, %struct.sge_rspq* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %11
  %23 = load %struct.sge_qset*, %struct.sge_qset** %3, align 8
  %24 = getelementptr inbounds %struct.sge_qset, %struct.sge_qset* %23, i32 0, i32 0
  %25 = call i32 @napi_schedule(i32* %24)
  store i32 1, i32* %2, align 4
  br label %27

26:                                               ; preds = %11, %1
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %22
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @napi_is_scheduled(i32*) #1

declare dso_local i64 @is_new_response(i32*, %struct.sge_rspq*) #1

declare dso_local i32 @napi_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
